- now we initialize production context even in debug mode.